--- a/index.ejs
+++ b/index.ejs
@@ -74,14 +74,14 @@
     </div>
     <main>
         <header>
-            <h3><%= file.name %></h3>
+            <h3><%= file.name %><span class="hide-on-print"><% if (file.servedPath) { %> (<a href="<%= file.servedPath %>" target="arquivo-servido">servir arquivo</a>)<% } %></span></h3>
         </header>
         <div id="stamps-container">
             <!-- <img src="images/stamps/mario-hammer.png" class="stamp"> -->
         </div>
         <pre><code><%= file.sourceCode %></code></pre>
     </main>
-    <script src="highlight.js/highlight.pack.js"></script>
+    <script src="highlight.js/highlight.min.js"></script>
     <script src="highlight.js/highlightjs-line-numbers.min.js"></script>
     <script src="annotator/annotator.min.js"></script>
     <script src="main.js" type="module"></script>
