--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Yusei Magic', sans-serif;
 }
 
-body > header {
+body>header {
     background-image: linear-gradient(to bottom right, #333, #9193a3);
     box-shadow: 6px 6px 6px #0003;
     grid-column: 1 / 3;
@@ -22,10 +22,12 @@ body > header {
     justify-content: space-between;
     padding: .75em 1.5em;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
-body > header > h1,
-body > header > h2 {
+body>header>h1, body>header>h2 {
     margin: 0;
 }
 
@@ -75,7 +77,7 @@ nav li.active {
     align-items: center;
 }
 
-#stamp-button-container > p {
+#stamp-button-container>p {
     margin-left: 1em;
 }
 
@@ -125,18 +127,24 @@ a:active {
     color: #0b20b8;
 }
 
-main > header {
+main>header {
     padding: .75em 1.25rem;
 }
 
-main > header > h3 {
+main>header>h3 {
     margin: 0;
 }
 
-main > pre {
+main>pre {
     padding: 1.25rem;
     position: relative;
     z-index: 0;
+    white-space: pre-wrap;
+}
+
+main>figure>img {
+    max-width: 100%;
+    outline: 1px solid black;
 }
 
 .annotator-hl {
@@ -176,27 +184,18 @@ code {
     color: white;
 }
 
-.stamp,
-.stamp-button {
+.stamp, .stamp-button {
     --border-size: 6px;
     --border-size-neg: calc(var(--border-size) * -1);
     --border-color: white;
     --outer-border-size: 2px;
     --outer-border-size-neg: calc(var(--outer-border-size) * -1);
     --outer-border-color: #d4d4d4;
-    filter: 
-        drop-shadow(var(--border-size)     0px 0px var(--border-color))
-        drop-shadow(var(--border-size-neg) 0px 0px var(--border-color))
-        drop-shadow(0px var(--border-size)     0px var(--border-color))
-        drop-shadow(0px var(--border-size-neg) 0px var(--border-color))
-        drop-shadow(var(--outer-border-size)     0px var(--outer-border-size) var(--outer-border-color))
-        drop-shadow(var(--outer-border-size-neg) 0px var(--outer-border-size) var(--outer-border-color))
-        drop-shadow(0px var(--outer-border-size)     var(--outer-border-size) var(--outer-border-color))
-        drop-shadow(0px var(--outer-border-size-neg) var(--outer-border-size) var(--outer-border-color));
+    filter: drop-shadow(var(--border-size) 0px 0px var(--border-color)) drop-shadow(var(--border-size-neg) 0px 0px var(--border-color)) drop-shadow(0px var(--border-size) 0px var(--border-color)) drop-shadow(0px var(--border-size-neg) 0px var(--border-color)) drop-shadow(var(--outer-border-size) 0px var(--outer-border-size) var(--outer-border-color)) drop-shadow(var(--outer-border-size-neg) 0px var(--outer-border-size) var(--outer-border-color)) drop-shadow(0px var(--outer-border-size) var(--outer-border-size) var(--outer-border-color)) drop-shadow(0px var(--outer-border-size-neg) var(--outer-border-size) var(--outer-border-color));
     touch-action: none;
     box-sizing: border-box;
 }
-    
+
 .stamp {
     position: absolute;
     transition: filter ease-out 400ms;
@@ -218,51 +217,109 @@ code {
     background-color: #efefef !important;
 }
 
+#notifications {
+    position: fixed;
+    bottom: 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+}
+
+.message {
+    border: 1px solid darkblue;
+    border-radius: 1px;
+    background-color: blue;
+    box-shadow: 5px 5px 5px #0003;
+    color: white;
+    transition: all 200ms ease-out;
+    padding: 1.5rem;
+    opacity: 0;
+    transform: translateY(calc(100% + 1rem));
+    pointer-events: auto;
+}
+
+.message.shown {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.message.error {
+    border-color: darkred;
+    background-color: red;
+}
+
+.message .close {
+    position: absolute;
+    right: 0.25rem;
+    top: 0.25rem;
+    cursor: pointer;
+}
+
+.message .close::before {
+    content: "✕";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+}
+
 @keyframes growing {
-    from { scale: 1 }
-    to   { scale: 1.1 }
+    from {
+        scale: 1
+    }
+    to {
+        scale: 1.1
+    }
 }
 
 @media print {
+    body > header {
+        position: static;
+    }
     #left-side {
         display: none;
     }
-
-    body > header {
+    body>header {
         box-shadow: initial;
         border-bottom: 1px solid gray;
     }
-
     .annotator-hl {
         background-color: rgb(101 0 194 / 34%) !important;
-        -webkit-print-color-adjust: exact; 
+        -webkit-print-color-adjust: exact;
     }
-
     .comment {
         background-color: rgb(101 0 194 / 34%) !important;
-        -webkit-print-color-adjust: exact; 
+        -webkit-print-color-adjust: exact;
     }
-
     @page {
-      size: landscape;
-      margin: 0;
+        size: landscape;
+        margin: 0;
     }
-
     html, body {
         min-height: initial;
     }
-
-    table { page-break-inside:auto }
-    tr    { page-break-inside:avoid; page-break-after:auto }
-    thead { display:table-header-group; }
-    tfoot { display:table-footer-group; }
-    
+    table {
+        page-break-inside: auto
+    }
+    tr {
+        page-break-inside: avoid;
+        page-break-after: auto
+    }
+    thead {
+        display: table-header-group;
+    }
+    tfoot {
+        display: table-footer-group;
+    }
     tr {
         page-break-inside: avoid;
         break-inside: avoid;
     }
-
     .hide-on-print {
         visibility: hidden;
+    }
+    #notifications {
+        display: none;
     }
 }
